src/main/java/com/example/geoserver/error/ogc/DataSourceNotFoundException.java
package com.example.geoserver.error.ogc;public class DataSourceNotFoundException {
}
